Apply Java 8-17 modernization: records, sealed classes, switch expressions, .formatted()
- Convert MatchInput and TacticalContextInput from classes to records (Java 16)
- Add sealed CoachException base class permitting EntityNotFoundException and AiGenerationException (Java 17)
- Replace if-else chain with switch expression in CoachService.computeInjuryRisk() (Java 14)
- Replace String.format() with .formatted() in CoachService and PlayerMatchStatController (Java 15)
- Clean up fully-qualified java.util.Set import in AuthService (Java 9)
- Remove unused TacticalContextInput import from RecommendationGraphQLController
- Update MatchService accessors for record-style methods (.homeTeamId() vs .getHomeTeamId())

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>